<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.adroid.androidxplorer.MainActivity">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/favorite"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_category"
        android:icon="@drawable/category"
        android:orderInCategory="100"
        android:title="@string/category"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />
</menu>